# rabbit

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Dockerfile  Makefile  azure-pipelines.yml  cmake_install.cmake  make.py  rabbit.g.py  rabbit_test
.bonesinger/: cmake.yml
.github/workflows/: cmake.yml  licant.yml
expers/: main.cpp  make.py
expers/curves/: make.py  target
expers/symmetric_matrix/: main.cpp  make.py  target
expers/trans2/: main.cpp  make.py  target
opengl_tests/bulbasaur/: main.cpp  make.py  target
opengl_tests/chart/: main.cpp  target
opengl_tests/font/: main.cpp  target
opengl_tests/qtchart/: main.cpp  make.py  qtchart
opengl_tests/sphere/: main.cpp  make.py  target
opengl_tests/texture/: main.cpp  target
rabbit/: camera.h  cell3d.h  curve2.h  curve3.h  gparams.h  inctest.cpp  intersect.cpp  intersect.h  interval.h  linalg.h  mesh.cpp  mesh.h  meshline.cpp  meshline.h  plane.h  prim2.h  space2.h  space3.h  trans2.h  types.h  util.h
rabbit/HIDE/: pntvec.h
rabbit/chart/: chart.h  qtchart.h
rabbit/compat/: reactphysics3d.h
rabbit/fitting/: ellipse_fit.h  ellipsoide_fit.h  ellipsoide_fitting.h
rabbit/font/: font.h  naive.cpp  naive.h  textzone.h
rabbit/geom/: curve.h  curve2.h  ngeom.h  surface.h
rabbit/interactive/: interactive_object.h
rabbit/math/: function.h  (+3 more)
test/: htrans3.cpp  intersect.cpp  intersect.hpp  line2.cpp  main.cpp  make.py  optimize.cpp  pose3.cpp  runtests  runtests_float  svd.cpp
tests/: line2.cpp  make.py  pose3.cpp  reactphysics3d.cpp  runtests_float
tools/: Dockerfile
(+56 files in other folders)
